Archive2/af/7e46b0a7f6290c/output
main.cpp:2:6: error: redefinition of 'f'
void f(int arr[]) {}
     ^
main.cpp:1:6: note: previous definition is here
void f(int* arr) {}
     ^
1 error generated.
