Archive2/af/7e46b0a7f6290c/main.cpp
void f(int* arr) {}
void f(int arr[]) {}

int main()
{
}